--- a/src/pages/AdminPanelStyle.css
+++ b/src/pages/AdminPanelStyle.css
@@ -91,6 +91,11 @@ header {
 	justify-content: center;
 	overflow: hidden;
 }
+
+.main-container a{
+	text-decoration: none;
+	color: black;
+}
 .main-container {
 	background-color: #dfeef3;
 	display: flex;
